--- a/modules/planning/proto/BUILD
+++ b/modules/planning/proto/BUILD
@@ -84,6 +84,34 @@ proto_library(
 )
 
 cc_proto_library(
+    name = "navi_path_decider_config_proto",
+    deps = [
+        ":navi_path_decider_config_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "navi_path_decider_config_proto_lib",
+    srcs = [
+        "navi_path_decider_config.proto",
+    ],
+)
+
+cc_proto_library(
+    name = "navi_speed_decider_config_proto",
+    deps = [
+        ":navi_speed_decider_config_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "navi_speed_decider_config_proto_lib",
+    srcs = [
+        "navi_speed_decider_config.proto",
+    ],
+)
+
+cc_proto_library(
     name = "planning_config_proto",
     deps = [
         ":planning_config_proto_lib",
@@ -102,6 +130,8 @@ proto_library(
         ":qp_spline_path_config_proto_lib",
         ":qp_st_speed_config_proto_lib",
         ":reference_line_smoother_config_proto_lib",
+        ":navi_path_decider_config_proto_lib",
+        ":navi_speed_decider_config_proto_lib",
     ],
 )
 
