--- a/modules/planning/BUILD
+++ b/modules/planning/BUILD
@@ -25,6 +25,7 @@ cc_library(
         "//modules/planning/planner/em:em_planner",
         "//modules/planning/planner/lattice:lattice_planner",
         "//modules/planning/planner/rtk:rtk_planner",
+        "//modules/planning/planner/navi:navi_planner",
         "//modules/planning/proto:planning_proto",
         "//modules/planning/proto:traffic_rule_config_proto",
         "//modules/planning/reference_line:reference_line_provider",
