--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,12 @@
         "request": "launch",
         // You can change the "planning" to your module name, but it should be 
         // same as those in gdbserver of the docker container. 
-        "program": "${workspaceRoot}/bazel-bin/modules/planning/planning",
+        //"program": "${workspaceRoot}/bazel-bin/modules/planning/planning",
+        "program": "${workspaceRoot}/bazel-bin/modules/localization/localization",
         // You can change "localhost:1111" to another "IP:port" name, but it 
         // should be same as those in gdbserver of the docker container.  
-        "miDebuggerServerAddress": "localhost:1111",
+        //"miDebuggerServerAddress": "localhost:1111",
+        "miDebuggerServerAddress": "localhost:2222",
         // You can change the task to meet your demands in the 
         // ".vscode/tasks.json" file (search the label:  
         // "start gdbserver"), but the module name and the port 
