--- a/modules/localization/lmd/common/BUILD
+++ b/modules/localization/lmd/common/BUILD
@@ -4,8 +4,16 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "localization_lmd_common",
+    srcs = [
+        "pose_list.cc",
+    ],
     hdrs = [
+        "pose_list.h",
         "tm_list.h",
+    ],
+    deps = [
+        "//modules/common:log",
+        "//modules/localization/proto:localization_proto",
     ],
 )
 
@@ -13,6 +21,7 @@ cc_test(
     name = "localization_lmd_common_test",
     size = "small",
     srcs = [
+        "pose_list_test.cc",
         "tm_list_test.cc",
     ],
     deps = [
