--- a/modules/localization/lmd/BUILD
+++ b/modules/localization/lmd/BUILD
@@ -18,8 +18,11 @@ cc_library(
         "//modules/common/proto:common_proto",
         "//modules/common/status",
         "//modules/common/time",
+        "//modules/common/util:thread_pool",
         "//modules/localization:localization_base",
         "//modules/localization/common:localization_common",
+        "//modules/localization/lmd/predictor:localization_lmd_predictor",
+        "//modules/localization/lmd/predictor/perception:localization_lmd_predictor_perception",
         "//modules/localization/proto:localization_config_proto",
         "//modules/localization/proto:localization_proto",
         "//modules/localization/proto:odometry_lane_marker_proto",
