--- a/modules/localization/lmd/common/BUILD
+++ b/modules/localization/lmd/common/BUILD
@@ -13,6 +13,7 @@ cc_library(
     ],
     deps = [
         "//modules/common:log",
+        "//modules/common/math",
         "//modules/localization/proto:localization_proto",
     ],
 )
