--- a/modules/localization/lmd/BUILD
+++ b/modules/localization/lmd/BUILD
@@ -22,6 +22,7 @@ cc_library(
         "//modules/localization:localization_base",
         "//modules/localization/common:localization_common",
         "//modules/localization/lmd/predictor:localization_lmd_predictor",
+        "//modules/localization/lmd/predictor/filter:localization_lmd_predictor_filtered_imu",
         "//modules/localization/lmd/predictor/output:localization_lmd_predictor_output",
         "//modules/localization/lmd/predictor/perception:localization_lmd_predictor_perception",
         "//modules/localization/lmd/predictor/raw:localization_lmd_predictor_raw_gps",
