--- a/modules/localization/conf/lmd_adapter.conf
+++ b/modules/localization/conf/lmd_adapter.conf
@@ -9,6 +9,11 @@ config {
   message_history_limit: 50
 }
 config {
+  type: RAW_IMU
+  mode: RECEIVE_ONLY
+  message_history_limit: 50
+}
+config {
   type: CHASSIS
   mode: RECEIVE_ONLY
   message_history_limit: 50
